--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.xxnr.operation">
 
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".RndApplication"
@@ -23,10 +27,10 @@
         <activity
             android:name=".activity.MainActivity"
             android:launchMode="singleTask" />
-        <!--主页-->
+        <!--登录页-->
         <activity
             android:name=".activity.LoginActivity"
-           />
+            android:windowSoftInputMode="stateHidden|adjustResize" />
 
     </application>
 
